feat(court): implementar preview e confirmação de desativação de quadra com validação de conflitos